--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -74,6 +74,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 15px;
   margin-top: 40px;
   --ifm-button-color: #000;
